объединение функционала двух сервисов в один

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,8 +2,21 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Postgres": "Host=localhost;Port=5432;Database=loans;Username=postgres;Password=postgres"
+  },
+  "Kafka": {
+    "BootstrapServers": "localhost:9092,localhost:9093,localhost:9094",
+    "Topics": {
+      "CalculateContractValues": "calculate-contract-values",
+      "CalculateAllContractValues": "calculate-all-contract-values",
+      "CalculateSchedule": "calculate-schedule",
+      "CalculateIndebtedness": "calculate-indebtedness"
+    }
+  }
 }
